# ticket-triage-llm

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Final Project Rubric.md  LICENSE  PLAN.md  README.md  SUMMARY.md  TODO.md  docker-compose.yml  pyproject.toml  ruff.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
data/: adversarial_set.jsonl  normal_set.jsonl
data/phase0/: qwen3.5-2b-smoke.jsonl  qwen3.5-4b-smoke.jsonl  qwen3.5-9b-smoke.jsonl
data/phase3/: e1-local-comparison.json  e2-size-vs-controls.json  e3-validation-impact.json
data/phase4/: adversarial-2b-pre-fix.json  adversarial-2b.json  adversarial-4b-pre-fix.json  adversarial-4b.json  adversarial-9b-pre-fix.json  adversarial-9b.json
docs/: DEPLOYMENT.md  PLAN.md  SUMMARY.md  architecture.md  cost-analysis.md  demo-script.md  evaluation-checklist.md  evaluation-plan.md  future-improvements.md  presentation-notes.md  threat-model.md  tradeoffs.md
docs/adr/: 0001-language-and-stack.md  0001-record-architecture-decisions.md  0002-validator-first-pipeline-with-bounded-retry.md  0003-pipeline-failure-handling-and-error-contract.md  0004-provider-abstraction-via-python-protocol.md  0005-sqlite-trace-storage-with-repository-pattern.md  0006-single-app-gradio-architecture.md  0007-local-deployment-with-docker.md  README.md  (+6 more)
scripts/: phase0_smoke_test.py  regenerate_phase4_jsons.py  run_e5_reasoning_adversarial.py  run_phase3_replication.py  run_phase4_replication.py
tests/: fakes.py
(+127 files in other folders)
