[project]
name = "ticket-triage-llm"
version = "1.0.3"
description = "Production-style support ticket triage with local-first LLM evaluation"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0",
    "gradio>=5.0.0",
    "openai>=1.50.0",
    "ollama>=0.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ticket_triage_llm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["ticket_triage_llm"]

[tool.coverage.report]
fail_under = 80
omit = [
    "src/ticket_triage_llm/app.py",
    "src/ticket_triage_llm/ui/*",
    "src/ticket_triage_llm/logging_config.py",
    "src/ticket_triage_llm/eval/runners/run_local_comparison.py",
    "src/ticket_triage_llm/eval/runners/run_validation_impact.py",
    "src/ticket_triage_llm/eval/runners/run_prompt_comparison.py",
    "src/ticket_triage_llm/eval/runners/run_adversarial_eval.py",
]
